syntax = "proto3";

package org.jetbrains.kotlin.kpm.idea.proto;
import "proto_idea_kpm_extras.proto";
option java_multiple_files = true;

message ProtoIdeaKpmModuleCoordinates {
  optional string build_id = 1;
  optional string project_path = 2;
  optional string project_name = 3;
  optional string module_name = 4;
  optional string module_classifier = 5;
}

message ProtoIdeaKpmLanguageSettings {
  optional string language_version = 1;
  optional string api_version = 2;
  optional bool is_progressive_mode = 3;
  repeated string enabled_language_features = 4;
  repeated string opt_in_annotations_in_use = 5;
  repeated string compiler_plugin_arguments = 6;
  repeated string compiler_plugin_classpath = 7;
  repeated string free_compiler_args = 8;
}

message ProtoIdeaKpmSourceDirectory {
  optional ProtoIdeaKpmExtras extras = 1;
  optional string absolute_path = 2;
  optional string type = 3;
}

message ProtoIdeaKpmResourceDirectory {
  optional ProtoIdeaKpmExtras extras = 1;
  optional string absolute_path = 2;
}

message ProtoIdeaKpmBinaryCoordinates {
  optional string group = 1;
  optional string module = 2;
  optional string version = 3;
  optional string kotlin_module_name = 4;
  optional string kotlin_fragment_name = 5;
}

message ProtoIdeaKpmFragmentCoordinates {
  optional ProtoIdeaKpmModuleCoordinates module = 1;
  optional string fragment_name = 2;
}

message ProtoIdeaKpmDependency {
  oneof dependency {
    ProtoIdeaKpmUnresolvedBinaryDependency unresolved_binary_dependency = 1;
    ProtoIdeaKpmResolvedBinaryDependency resolved_binary_dependency = 2;
    ProtoIdeaKpmFragmentDependency fragment_dependency = 3;
  }
}

message ProtoIdeaKpmUnresolvedBinaryDependency {
  optional ProtoIdeaKpmExtras extras = 1;
  optional ProtoIdeaKpmBinaryCoordinates coordinates = 2;
  optional string cause = 3;
}

message ProtoIdeaKpmResolvedBinaryDependency {
  optional ProtoIdeaKpmExtras extras = 1;
  optional ProtoIdeaKpmBinaryCoordinates coordinates = 2;
  optional string binary_type = 3;
  optional string binary_file_absolute_path = 4;
}

message ProtoIdeaKpmFragmentDependency {
  enum Type {
    REGULAR = 0;
    FRIEND = 1;
    REFINES = 2;
  }

  optional ProtoIdeaKpmExtras extras = 1;
  optional Type type = 2;
  optional ProtoIdeaKpmFragmentCoordinates coordinates = 3;
}

message ProtoIdeaKpmPlatform {
  oneof platform {
    ProtoIdeaKpmJvmPlatform jvm = 1;
    ProtoIdeaKpmNativePlatform native = 2;
    ProtoIdeaKpmJsPlatform js = 3;
    ProtoIdeaKpmWasmPlatform wasm = 4;
    ProtoIdeaKpmUnknownPlatform unknown = 5;
  }
}

message ProtoIdeaKpmJvmPlatform {
  optional ProtoIdeaKpmExtras extras = 1;
  optional string jvm_target = 2;
}

message ProtoIdeaKpmNativePlatform {
  optional ProtoIdeaKpmExtras extras = 1;
  optional string konan_target = 2;
}

message ProtoIdeaKpmJsPlatform {
  optional ProtoIdeaKpmExtras extras = 1;
  optional bool isIr = 2 ;
}

message ProtoIdeaKpmWasmPlatform {
  optional ProtoIdeaKpmExtras extras = 1;
}

message ProtoIdeaKpmUnknownPlatform {
  optional ProtoIdeaKpmExtras extras = 1;
}

message ProtoIdeaKpmFragment {
  optional ProtoIdeaKpmExtras extras = 1;
  optional ProtoIdeaKpmFragmentCoordinates coordinates = 2;
  repeated ProtoIdeaKpmPlatform platforms = 3;
  optional ProtoIdeaKpmLanguageSettings language_settings = 4;
  repeated ProtoIdeaKpmDependency dependencies = 5;
  repeated ProtoIdeaKpmSourceDirectory source_directories = 6;
}

message ProtoIdeaKpmCompilationOutput {
  repeated string classes_dirs = 1;
  optional string resources_dir = 2;
}

message ProtoIdeaKpmVariant {
  optional ProtoIdeaKpmFragment fragment = 1;
  optional ProtoIdeaKpmPlatform platform = 2;
  map<string, string> variant_attributes = 3;
  optional ProtoIdeaKpmCompilationOutput compilation_output = 4;
}

message ProtoIdeaKpmModule {
  optional ProtoIdeaKpmExtras extras = 1;
  optional ProtoIdeaKpmModuleCoordinates coordinates = 2;
  repeated ProtoIdeaKpmFragment fragments = 3;
  repeated ProtoIdeaKpmVariant variants = 4;
}

message ProtoIdeaKpmProject {
  optional ProtoIdeaKpmExtras extras = 1;
  optional string gradle_plugin_version = 2;
  optional string core_libraries_version = 3;
  optional string explicit_api_mode_cli_option = 4;
  optional string kotlin_native_home = 5;
  repeated ProtoIdeaKpmModule modules = 6;
}

message ProtoIdeaKpmSchemaInfo {
  optional uint32 since_schema_version_major = 1;
  optional uint32 since_schema_version_minor = 2;
  optional uint32 since_schema_version_patch = 3;
  optional string message = 4;
}

message ProtoIdeaKpmContainer {
  optional uint32 schema_version_major = 1;
  optional uint32 schema_version_minor = 2;
  optional uint32 schema_version_patch = 3;
  repeated ProtoIdeaKpmSchemaInfo schema_infos = 4;

  optional ProtoIdeaKpmProject project = 24;
}
